@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="125"
+    android:versionCode="128"
     android:versionName="2.1" >
 
     <uses-sdk
