@@ -13,21 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/inboxMessageCountText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/empty_text"
-            tools:context=".MainActivity" />
-
-        <TextView
-            android:id="@+id/sentMessageCountText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/empty_text"
-            tools:context=".MainActivity" />
-
-        <TextView
-            android:id="@+id/allMessageCountText"
+            android:id="@+id/messageCountAtGlanceText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/empty_text"
