@@ -5,7 +5,7 @@
     <string name="title_section3">Sur</string>
     
     <string name="app_name">du compteur de messages</string>
-    <string name="app_version">Version 2.1.25 (décembre 2013)</string>
+    <string name="app_version">Version 2.1.28 (décembre 2013)</string>
     <string name="app_desc">Compteur de messages affiche les messages statistiques de la boîte de réception et le nombre de messages à partir de chacun de vos contacts. Le code source de ce projet est disponible à GitHub</string>
 	<string name="app_disclaim">Avertissement: Cette application est créé à des fins éducatives et en tant que telle n\'a pas de garantie ou de soutien. Depuis papiers API Android sont utilisées, cette application peut ne pas fonctionner comme prévu sur tous les appareils.</string>
 	<string name="app_developer_info">Conçu et développé au ae labs</string>
@@ -22,8 +22,9 @@
     <string name="empty_text"></string>
     <string name="empty_list">Aucun message trouvé</string>
     
-    <string name="message_count_inbox">%s reçus + </string>
-    <string name="message_count_sent">%s envoyés = </string>
+    <string name="message_count_inbox">%s reçus</string>
+    <string name="message_count_sent">%s envoyés</string>
+    <string name="message_count_draft"> %s draft</string>
     <string name="message_count_all">%s au total</string>
     <string name="message_loading">Chargement des données, veuillez patienter.</string>
     
